--- a/index.scss
+++ b/index.scss
@@ -1,3 +1,142 @@
+$moderateCyan: hsl(176, 50%, 47%);
+$darkCyan: hsl(176, 72%, 28%);
+
+* {
+	list-style-type: none;
+	text-decoration: none;
+	padding: 0;
+	margin: 0;
+}
+
 header {
 	background-image: url('./images/image-hero-mobile.jpg');
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+	height: 260px;
+	padding: 30px 25px;
+	display: flex;
+	justify-content: space-between;
+}
+
+.logo {
+	width: 128px;
+	height: 20px;
+}
+
+.hamburger {
+	width: 15px;
+	height: 14px;
+}
+
+.header__modal {
+	display: none;
+}
+
+main {
+	padding: 250px 25px 100px 25px;
+	background-color: #F2F5F8;
+	position: relative;
+}
+
+.floatingMain {
+	border-radius: 10px;
+	background-color: white;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+	position: absolute;
+	top: -60px;
+	max-width: calc(100% - 100px);
+	height: 200px;
+	padding: 40px 25px;
+	&__logo {
+		position: absolute;
+		top: -28px;
+		left: calc(50% - 28px);
+	}
+	&__title {
+		text-align: center;
+	}
+	&__description {
+		text-align: center;
+	}
+	&__book {
+		width: 56px;
+		height: 56px;
+	}
+}
+
+.progress {
+	border-radius: 10px;
+	background-color: white;
+	padding: 30px 25px;
+	margin-bottom: 30px;
+	&__section {
+
+	}
+	&__money {
+
+	}
+	&__progress {
+
+	}
+	&__label {
+		color: grey;
+	}
+}
+
+.about {
+	border-radius: 10px;
+	background-color: white;
+	padding: 30px 25px;
+	&__title {
+		margin-bottom: 20px;
+	}
+	&__description {
+		margin-bottom: 20px;
+	}
+}
+
+.pledgeCard {
+	border-radius: 10px;
+	border: 1px solid silver;
+	padding: 25px;
+	margin-bottom: 25px;
+	&__title {
+		margin-bottom: 10px;
+	}
+	&__subtitle {
+		color: $moderateCyan;
+	}
+	&__description {
+		color: grey;
+		margin: 25px 0;
+	}
+	&__stock {
+		margin-bottom: 25px;
+	}
+}
+
+.button {
+	background-color: $moderateCyan;
+	color: white;
+	border: none;
+	border-radius: 50px;
+	&--back {
+		width: 200px;
+		height: 56px;
+	}
+	&--select {
+		width: 140px;
+		height: 45px;
+	}
+}
+
+.backModal {
+	display: none;
+}
+
+.successModal {
+	display: none;
 }
